--- a/Visualization Cloudiness.html
+++ b/Visualization Cloudiness.html
@@ -17,7 +17,7 @@
     <div class="page-header"> <!--All the components wrapped at the top-->
         <div class = "container">      
             <!-- <div class="pull-left"><h1><span><a href="Landing.html">Lattitude</a></span></h1></div> Lattitude is included in span so as to have its background colored-->
-            <div class="pull-left"><h1><span><a href="Landing.html">Lattitude</a></span></h1></div>
+            <div class="pull-left"><h1><span><a href="index.html">Lattitude</a></span></h1></div>
             <div class="collapse navbar-collapse" id="navbar-container">
                 <ul class="nav navbar-nav pull-right">
                     <li class = "dropdown">
@@ -36,21 +36,52 @@
                 </ul>
             </div>        
         </div> 
-    </div> 
-    <h1>Cloudiness</h1>
-    <hr>
-    <div class="container">
+    </div>
+    <div class = "container">
         <div class="row">
-            <div class="col-lg-8">
-                    <a target=_blank href="C:\Users\praga\OneDrive\Documents\Rutgers\Rutgers_Work\02-HomeWork\12-Web\MyImages\Cloudiness(%) vs. Latitude1.png">
-                        <img src="C:\Users\praga\OneDrive\Documents\Rutgers\Rutgers_Work\02-HomeWork\12-Web\MyImages\Cloudiness(%) vs. Latitude1.png"
-                        alt="Temperature Vs Cloudiness"> 
-                    </a>      
-                <p>
+            <div class="col-lg-8 background-color white-space-right img">
+                <h1>Cloudiness</h1>
+                <hr>
+                <a target=_blank href="MyImages\Cloudiness(%) vs. Latitude1.png">
+                    <img src="MyImages\Cloudiness(%) vs. Latitude1.png"
+                    alt="Latitude Vs Cloudiness"> 
+                </a>      
+                <p class="maintext">
                     The cloudiness is unaffected by the change in lattitude or proximity to the equator.
                 </p>
             </div>
-        </div>
+            <div class="col-lg-4 background-color white-space-left side-height">
+                <h1>Visualizations</h1>
+                <div class ="row">
+                    <div class="col-lg-6">
+                        <a target=_blank href="Visualization Temperature.html">
+                            <img class= "image-responsive resize repose" src="MyImages\Temperature(F) vs. Latitude1.png"
+                                alt="Temperature Vs Latitude">
+                        </a>    
+                    </div>  
+                    <div class="col-lg-6">
+                        <a target=_blank href="Visualization Humidity.html">
+                            <img class= "image-responsive resize repose" src="MyImages\Humidity(%) vs. Latitude1.png"
+                                alt="Temperature Vs Humidity"> 
+                        </a>        
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <a target=_blank href="Visualization Cloudiness.html">
+                            <img class= "image-responsive resize repose" src="MyImages\Cloudiness(%) vs. Latitude1.png"
+                               alt="Temperature Vs Cloudiness">
+                        </a>    
+                    </div>
+                    <div class="col-lg-6">
+                        <a target=_blank href="Visualization Wind_Speed.html">
+                            <img class= "image-responsive resize repose" src="MyImages\Wind Speed(MPH) vs. Latitude1.png"
+                               alt="Temperature Vs Windspeed">
+                        </a>        
+                    </div>
+                </div>        
+            </div>
+        </div>     
     </div>
     <!-- Footer -->
     <footer class="page-footer font-small">
