--- a/Visualization Temperature.html
+++ b/Visualization Temperature.html
@@ -17,7 +17,7 @@
     <div class="page-header"> <!--All the components wrapped at the top-->
         <div class = "container">      
             <!-- <div class="pull-left"><h1><span><a href="Landing.html">Lattitude</a></span></h1></div> Lattitude is included in span so as to have its background colored-->
-            <div class="pull-left"><h1><span><a href="Landing.html">Lattitude</a></span></h1></div>
+            <div class="pull-left"><h1><span><a href="index.html">Lattitude</a></span></h1></div>
             <div class="collapse navbar-collapse" id="navbar-container">
                 <ul class="nav navbar-nav pull-right">
                     <li class = "dropdown">
@@ -25,11 +25,11 @@
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                                <li><a href="Visualization Temperature.html">Max Temperature</a></li>
-                                <li><a href="Visualization Cloudiness.html">Cloudiness</a></li>
-                                <li><a href="Visualization Humidity.html">Humidity</a></li>
-                                <li><a href="Visualization Wind_Speed.html">Wind Speed</a></li>
-                            </ul>
+                            <li><a href="Visualization Temperature.html">Max Temperature</a></li>
+                            <li><a href="Visualization Cloudiness.html">Cloudiness</a></li>
+                            <li><a href="Visualization Humidity.html">Humidity</a></li>
+                            <li><a href="Visualization Wind_Speed.html">Wind Speed</a></li>
+                        </ul>
                     </li>
                     <li><a href="Comparison.html">Comparison</a></li>
                     <li><a href="Data.html">Data</a></li>
@@ -37,21 +37,52 @@
             </div>        
         </div> 
     </div>     
-    <h1>Max Temperature</h1>
-    <hr>
     <div class="container">
         <div class="row">
-            <div class="col-lg-8">
-                <a target=_blank href="C:\Users\praga\OneDrive\Documents\Rutgers\Rutgers_Work\02-HomeWork\12-Web\MyImages\Temperature(F) vs. Latitude1.png"
-                alt="Temperature Vs Latitude">
-                    <img src="C:\Users\praga\OneDrive\Documents\Rutgers\Rutgers_Work\02-HomeWork\12-Web\MyImages\Temperature(F) vs. Latitude1.png"
+            <div class="col-lg-8 background-color white-space-right img">
+                <h1>Max Temperature</h1>
+                <hr>
+                <a target=_blank href="MyImages\Temperature(F) vs. Latitude1.png"
                     alt="Temperature Vs Latitude">
+                    <img src="MyImages\Temperature(F) vs. Latitude1.png"
+                    alt="Latitude Vs Latitude">
                 </a>
-                <p>
+                <p class="maintext">
                     As expected the weather becomes hotter as one approaches towards the equator (0 degree latitude).
                     Interesting fact is that the southern hemisphere tends to be warmer than the northen hemisphere at this time.
                     This may be due to the tilt of the earth at the time of the year this data was gathered.    
                 </p>
+            </div>
+            <div class="col-lg-4 background-color white-space-left side-height">
+                <h1>Visualizations</h1>
+                <div class ="row">
+                    <div class="col-lg-6">
+                        <a target=_blank href="Visualization Temperature.html">
+                            <img class= "image-responsive resize repose" src="MyImages\Temperature(F) vs. Latitude1.png"
+                                alt="Temperature Vs Latitude">
+                        </a>    
+                    </div>  
+                    <div class="col-lg-6">
+                        <a target=_blank href="Visualization Humidity.html">
+                            <img class= "image-responsive resize repose" src="MyImages\Humidity(%) vs. Latitude1.png"
+                                alt="Temperature Vs Humidity"> 
+                        </a>        
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <a target=_blank href="Visualization Cloudiness.html">
+                            <img class= "image-responsive resize repose" src="MyImages\Cloudiness(%) vs. Latitude1.png"
+                                alt="Temperature Vs Cloudiness">
+                        </a>    
+                    </div>
+                    <div class="col-lg-6">
+                        <a target=_blank href="Visualization Wind_Speed.html">
+                            <img class= "image-responsive resize repose" src="MyImages\Wind Speed(MPH) vs. Latitude1.png"
+                                alt="Temperature Vs Windspeed">
+                        </a>        
+                    </div>
+                </div>        
             </div>
         </div>
     </div>
