--- a/convertcsv.html
+++ b/convertcsv.html
@@ -1,5 +1,5 @@
 <table class="table table-bordered table-hover table-condensed">
-<thead><tr><th title="Field #1">Serial No.</th>
+<thead><tr><th title="Field #1">City_ID</th>
 <th title="Field #2">City</th>
 <th title="Field #3">Country</th>
 <th title="Field #4">Longitude (Degrees)</th>
